Manually add shadowed dependencies as modules during compilation