@@ -25,7 +25,9 @@ tasks {
 	compileModule {
 		options.compilerArgs.addAll(listOf(
 			"--add-modules", "org.opentest4j.reporting.events",
-			"--add-reads", "org.junit.platform.reporting=org.opentest4j.reporting.events"
+			"--add-reads", "${project.projects.junitPlatformReporting.dependencyProject.javaModuleName}=org.opentest4j.reporting.events",
+			"--add-modules", "info.picocli",
+			"--add-reads", "${javaModuleName}=info.picocli"
 		))
 	}
 	shadowJar {
